--- a/module/print/print_ru.html
+++ b/module/print/print_ru.html
@@ -1,4 +1,7 @@
 <div>
+    <div class="hidden-line">
+
+    </div>
     <div style="margin: 10px; text-align: right">
         <b>Детальнee:</b> <a href="http://lipatov.hol.es">http://lipatov.hol.es</a>
     </div>
