--- a/module/print/print_en.html
+++ b/module/print/print_en.html
@@ -1,5 +1,8 @@
 
 <div>
+    <div class="hidden-line">
+
+    </div>
 <div style="margin: 10px; text-align: right">
     <b>Full info:</b> <a href="http://lipatov.hol.es">http://lipatov.hol.es</a>
 </div>
