--- a/module/web/web_en.html
+++ b/module/web/web_en.html
@@ -1,14 +1,75 @@
 <div class="container-item">
+    <div class="detail" style="text-align: right">
+        <div style="padding: 5px 5px 0 5px; overflow: hidden">
+            <a href="#web/encon" style="">Veew detail</a>
+        </div>
+
+    </div>
+    <div class="item-block">
+        <div>
+            <div   style="float: right; width: 50%; height: 300px">
+                <div class="title-monitoring">
+                    <img src="module/web/monitoring/title.jpg" style="width: 90%; background: #000000">
+                </div>
+            </div>
+
+            <div style="margin-right: 50%">
+                <p><a href="http://motohelp-ua.org/atlas" target="_blank"
+                      title="Перейти на страницу..">EnCon(Android)</a>
+                </p>
+
+                <p>
+                    <!--Для cлужбы спасения и помощи двухколесным участникам дорожного движения -->
+                    For  rescue and assistance Service moto/velo participant of traffic
+                    - <a
+                        href="http://motohelp-ua.org/"
+                        target="_blank"
+                        title="MotoHelp">МотоХелп</a>.
+                    <!--Сайт написан с учетом всевозможных пожеланий для более оперативного реагирование на инциденты в-->
+                    Site create according to the wishes MotoHelp Service for immediately response road accident.
+                    Most of the function site is notification MH. For the average user this functionality is hidden.
+                    The main advantage of the system, operating at slow communication.
+                </p>
+
+                <p>
+                    The principle of operation and design: The site uses the library <a href="	http://leafletjs.com/"
+                                                                                        target="_blank"
+                                                                                        title="Leaflet">Leaflet</a>.
+
+                    JAVA parser listens port, receives, decodes and stores the received packets into a MySQL database
+                    Page with javascript regularly polls the database analyzing the emergence of new coordinates.
+                    All data is displayed for all users in the group.
+
+                    Demo entrance:
+                    demo
+                    demo.
+
+                </p>
 
 
+                <p>
+                    Go to the page <a href="http://motohelp-ua.org/atlas" target="_blank"
+                                      title=" Go to the page..">
+                    http://motohelp-ua.org/atlas </a>
+
+                </p>
+
+                <p>Demo entrance  -> login: demo | Pass: demo </p>
+            </div>
+        </div>
+
+    </div>
+</div>
+<!--////////////////////-->
+
+
+<div class="container-item">
     <div class="detail" style="text-align: right">
         <div style="padding: 5px 5px 0 5px; overflow: hidden">
             <a href="#web/monitoring" style="">Veew detail</a>
         </div>
 
     </div>
-
-
     <div class="item-block">
         <div>
             <div   style="float: right; width: 50%; height: 300px">
@@ -19,7 +80,7 @@
 
             <div style="margin-right: 50%">
                 <p><a href="http://motohelp-ua.org/atlas" target="_blank"
-                         title="Перейти на страницу..">Мониторинг</a>
+                         title="Перейти на страницу..">Monitoring</a>
                 </p>
 
                 <p>
@@ -65,16 +126,12 @@
     </div>
 </div>
 <div class="container-item">
-
-
     <div class="detail" style="text-align: right">
         <div style="padding: 5px 5px 0 5px; overflow: hidden">
             <a href="#web/borispol" style="">Veew detail</a>
         </div>
 
     </div>
-
-
     <div class="item-block">
         <div>
             <div   style="float: right; width: 50%; height: 300px">
@@ -82,10 +139,6 @@
                     <img src="module/web/borispol/borispol1.jpg" style="width: 90%; bacground: black">
                 </div>
             </div>
-
-
-
-
             <div style="margin-right: 50%; min-height: 300px">
                 <p><a href="http://borispol.hol.es" target="_blank" title="Перейти на страницу..">Метео</a>
                 </p>
