--- a/module/web/web_ru.html
+++ b/module/web/web_ru.html
@@ -1,9 +1,44 @@
+
+<div class="container-item">
+    <div class="detail" style="text-align: right">
+        <div style="padding: 5px 5px 0 5px; overflow: hidden">
+            <a href="#web/encon" style="">View detail</a>
+        </div>
+
+    </div>
+    <div class="item-block">
+        <div>
+            <div   style="float: right; width: 50%; height: 300px">
+                <div class="title-encon">
+                    <img src="module/web/encon/title.jpg" style="width: 90%; background: #000000">
+                </div>
+            </div>
+
+            <div style="margin-right: 50%">
+                <p><a href="https://play.google.com/store/apps/details?id=com.atlas.mars.englishcon" target="_blank"
+                      title="Перейти на страницу..">EnCon (Android)</a>
+                </p>
+
+                <p>
+                    Описание
+                </p>
+
+                <p>
+                    Очень простое приложение для запоминания слов.
+                    Вы просто добавляете незнакомые слова и их перевод и заучиваете когда вам удобно, скрывая или отображая перевод. Для закрепления результата, вам требуется десять раз правильно составить слово из перемешанных букв.
+                </p>
+            </div>
+        </div>
+
+    </div>
+</div>
+
 <div class="container-item">
 
 
     <div class="detail" style="text-align: right">
         <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/monitoring" style="">Veew detail</a>
+            <a href="#web/monitoring" style="">View detail</a>
         </div>
 
     </div>
@@ -70,7 +105,7 @@
 
     <div class="detail" style="text-align: right">
         <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/borispol" style="">Veew detail</a>
+            <a href="#web/borispol" style="">View detail</a>
         </div>
 
     </div>
@@ -120,7 +155,7 @@
 
     <div class="detail" style="text-align: right">
         <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/hyosung" style="">Veew detail</a>
+            <a href="#web/hyosung" style="">View detail</a>
         </div>
 
     </div>
