--- a/module/about/about_en.html
+++ b/module/about/about_en.html
@@ -1,5 +1,9 @@
 <div>
-	<h4> December 2013 - to present time:Unisystem.Programming web interface. Basic info <a
+
+    <h4>  December 2014 - to present time time: Unisystem. Programming web interface inside products. Project  <a href="http://loyverse.com/">http://loyverse.com</a>
+        Subdivision in which I work</h4>
+
+	<h4> December 2013 - to December 2014 time:Unisystem. Programming web interface. Basic info <a
 			href="http://reteko.com/">http://reteko.com/</a>. </h4>
 
 	<h4>February 2012 - to present time - own project: Development real-time GPS tracking service (HTML, PHP, JS,
