add anycontrol and save lang to cookies

--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
 
     <meta charset="utf-8">
 
-    <link rel="stylesheet" href="build/index.css?v=2015.04.09-12:15:08">
+    <link rel="stylesheet" href="build/index.css?v=2015.06.10-16:00:35">
     <!--<link rel="stylesheet" href="lib/leaflet/leaflet.css">-->
 
-	<!--<script src="lib/jQuery/jquery-1.11.0.min.js"></script>
+	<script src="lib/jQuery/jquery-1.11.0.min.js"></script>
     <script src="lib/jQuery/jquery.scrollNav.min.js"></script>
     <script src="lib/angular/angular.min.js"></script>
+    <script src="lib/angular/angular-cookies.min.js"></script>
     <script src="lib/angular/angular-route.min.js"></script>
-	<script src="lib/angular/angular-animate.js"></script>
-    <script src="lib/angular/angular-sanitize.js"></script>
+	<script src="lib/angular/angular-animate.min.js"></script>
+    <script src="lib/angular/angular-sanitize.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/dirrectiveSkill.js"></script>
     <script src="module/contact/contact.js"></script>
-    <script src="lib/leaflet/leaflet.js"></script>-->
+    <script src="lib/leaflet/leaflet.js"></script>
 
 
 
-    <script src="build/scripts.min.js?v=2015.04.09-12:15:08"></script>
+    <!--<script src="build/scripts.min.js?v=2015.06.10-16:00:35"></script>-->
 </head>
 <body>
 
