--- a/module/about/about_en.html
+++ b/module/about/about_en.html
@@ -1,10 +1,13 @@
 <div>
 
-    <h4>  December 2014 - to present time time: Unisystem. Programming web interface inside products. Project  <a href="http://loyverse.com/">http://loyverse.com</a>
-        Subdivision in which I work</h4>
+    <h4> Декабрь 2014 - по настоящее время: Unisystem. Работа над новым проектом "LOYVERSE".  <a href="http://loyverse.com/">http://loyverse.com/</a>. </h4>
 
-	<h4> December 2013 - to December 2014 time:Unisystem. Programming web interface. Basic info <a
-			href="http://reteko.com/">http://reteko.com/</a>. </h4>
+    <h4> Декабрь 2013 - по декабрь 2014: Unisystem. Создание веб интерфесов. Основной проект "Ретеко кассир" - Основная информация <a
+            href="http://reteko.com/">http://reteko.com/</a>. </h4>
+    <p> Обязанности :</p>
+    <ul type="disc">
+        <li>Создание веб интерфейса (дизайн логика etc.)</li>
+    </ul>
 
 	<h4>February 2012 - to present time - own project: Development real-time GPS tracking service (HTML, PHP, JS,
 		JAVA, (on Centos OpenVZ)).</h4>
