--- a/module/about/about_ru.html
+++ b/module/about/about_ru.html
@@ -1,8 +1,15 @@
 <div>
 
+    <h4> Декабрь 2014 - по настоящее время: Unisystem. Работа над новым проектом "LOYVERSE".  <a href="http://loyverse.com/">http://loyverse.com/</a>. </h4>
 
-    <h4> Декабрь 2013 - по настоящее время:Unisystem. Создание веб интерфесов по управлению системой. Основная информация <a
+    <h4> Декабрь 2013 - по декабрь 2014: Unisystem. Создание веб интерфесов. Основной проект "Ретеко кассир" - Основная информация <a
             href="http://reteko.com/">http://reteko.com/</a>. </h4>
+    <p> Обязанности :</p>
+    <ul type="disc">
+        <li>Создание веб интерфейса (дизайн логика etc.)</li>
+    </ul>
+
+
     <h4>Фефраль 2012 - по настоящее время - свой проект: Разработка GPS систем контроля и слежения в реальном времени
          (HTML, PHP, JS,
         JAVA, (on Centos OpenVZ)).
