--- a/module/web/web_en.html
+++ b/module/web/web_en.html
@@ -1,6 +1,46 @@
 <div class="container-item">
     <div class="detail" style="text-align: right">
         <div style="padding: 5px 5px 0 5px; overflow: hidden">
+            <a href="#web/anycontrol" style="">View detail</a>
+        </div>
+
+    </div>
+    <div class="item-block">
+        <div>
+            <div   style="float: right; width: 50%; height: 300px">
+                <div class="title-encon">
+                    <img src="module/web/anycontrol/title.jpg" style="width: 90%; background: #000000">
+                </div>
+            </div>
+
+            <div style="margin-right: 50%">
+                <p><a href="https://play.google.com/store/apps/details?id=com.atlas.mars.objectcontrol" target="_blank"
+                      title="Перейти на страницу..">AnyControl (Android)</a>
+                </p>
+
+                <p>
+                    Description.
+                </p>
+
+                <p>
+                    The application is designed for a multiple devices and an unlimited number of commands. Any device controlled via SMS commands can be entered in the application memory.
+                    First, you create object that will monitor and on the page of all the commands add code associated with the object.
+                    The home page displays selected commands that you can send. On the page  all the commands can be stored a full list of commands that you do not use, but can be useful. In order to command were available to send you need to mark them as favorites.  Is also present the history of sent commands. If the command has been delivered her date marked in green color.
+
+                    In the application added map, which can be used to define you location, also to monitor the mobile devices that are attached to one of the servers monitoring.
+
+                    The application is available in English and Russian languages.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<div class="container-item">
+    <div class="detail" style="text-align: right">
+        <div style="padding: 5px 5px 0 5px; overflow: hidden">
             <a href="#web/encon" style="">View detail</a>
         </div>
 
