--- a/module/web/encon/encon_ru.html
+++ b/module/web/encon/encon_ru.html
@@ -3,5 +3,6 @@
     <div id="featured" orbit  >
         <img src="module/web/encon/encon01.jpg" alt="Overflow: Hidden No More" />
         <img src="module/web/encon/encon02.jpg" alt="Overflow: Hidden No More" />
+        <img src="module/web/encon/encon03.jpg" alt="Overflow: Hidden No More" />
     </div>
 </div>
