--- a/module/web/web_ru.html
+++ b/module/web/web_ru.html
@@ -1,4 +1,48 @@
+<div class="container-item">
+    <div class="detail" style="text-align: right">
+        <div style="padding: 5px 5px 0 5px; overflow: hidden">
+            <a href="#web/anycontrol" style="">View detail</a>
+        </div>
 
+    </div>
+    <div class="item-block">
+        <div>
+            <div   style="float: right; width: 50%; height: 300px">
+                <div class="title-encon">
+                    <img src="module/web/anycontrol/title.jpg" style="width: 90%; background: #000000">
+                </div>
+            </div>
+
+            <div style="margin-right: 50%">
+                <p><a href="https://play.google.com/store/apps/details?id=com.atlas.mars.objectcontrol" target="_blank"
+                      title="Перейти на страницу..">AnyControl (Android)</a>
+                </p>
+
+                <p>
+                    Description.
+                </p>
+
+                <p>
+                    The application is designed for a variety of devices and an unlimited number of commands. Any devices controlled via SMS commands can be entered in the application memory.
+                    Для начала вы создаете объект который будете контролировать, и на странице всех команд добавляете связанные с объектом команды.
+                    На главной странице находятся избранные команды, которые вы можете отправить.   На странице всех команд может храниться полный список команд которые вы не используете но могут пригодиться. Для того чтобы команды были доступны для отправки вам нужно отметить их как избранные. Так же присутствует история отправленных команд. Если команда была доставлена ее дата отмечается зеленым цветом.
+
+                    В приложение добавлена карта, с помощью которой можно определить не только свое местоположение но и следить за подвижными обьектами которые привязаны к одному из серверов мониторинга.
+
+                    Приложение доступно на русском и английском языках.
+                </p>
+
+
+
+
+
+            </div>
+        </div>
+
+    </div>
+</div>
+
+        <!--////////////////////-->
 <div class="container-item">
     <div class="detail" style="text-align: right">
         <div style="padding: 5px 5px 0 5px; overflow: hidden">
