en translate start

--- a/module/about/about_en.html
+++ b/module/about/about_en.html
@@ -1,10 +1,10 @@
 <div>
 
-    <h4> Декабрь 2014 - по настоящее время: Unisystem. Работа над новым проектом "LOYVERSE".  <a href="http://loyverse.com/">http://loyverse.com/</a>. </h4>
+    <h4> Desember 2014 - to present time: Unisystem. New project "LOYVERSE".  <a href="http://loyverse.com/">http://loyverse.com/</a>. </h4>
 
-    <h4> Декабрь 2013 - по декабрь 2014: Unisystem. Создание веб интерфесов. Основной проект "Ретеко кассир" - Основная информация <a
+    <h4> Декабрь 2013 - по декабрь 2014: Unisystem. Create web interfaces. Main project "Ретеко кассир" - info <a
             href="http://reteko.com/">http://reteko.com/</a>. </h4>
-    <p> Обязанности :</p>
+    <p> Duties:</p>
     <ul type="disc">
         <li>Создание веб интерфейса (дизайн логика etc.)</li>
     </ul>
