en translate start

--- a/module/about/about_en.html
+++ b/module/about/about_en.html
@@ -1,12 +1,15 @@
 <div>
 
     <h4> Desember 2014 - to present time: Unisystem. New project "LOYVERSE".  <a href="http://loyverse.com/">http://loyverse.com/</a>. </h4>
+    <div>
+
+    </div>
 
     <h4> Декабрь 2013 - по декабрь 2014: Unisystem. Create web interfaces. Main project "Ретеко кассир" - info <a
             href="http://reteko.com/">http://reteko.com/</a>. </h4>
     <p> Duties:</p>
     <ul type="disc">
-        <li>Создание веб интерфейса (дизайн логика etc.)</li>
+        <li>Create web interface (design logic etc.)</li>
     </ul>
 
 	<h4>February 2012 - to present time - own project: Development real-time GPS tracking service (HTML, PHP, JS,
