loyverse Description start

--- a/module/web/web_ru.html
+++ b/module/web/web_ru.html
@@ -1,13 +1,48 @@
 <div class="container-item">
     <div class="detail" style="text-align: right">
         <div style="padding: 5px 5px 0 5px; overflow: hidden">
+            <a href="#web/loyverse" style="">View detail</a>
+        </div>
+
+    </div>
+    <div class="item-block">
+        <div>
+            <div style="float: right; width: 50%; height: 300px">
+                <div class="title-encon">
+                    <img src="module/web/anycontrol/title.jpg" style="width: 90%; background: #000000">
+                </div>
+            </div>
+
+            <div style="margin-right: 50%">
+                <p><a href="https://biz.loyverse.com" target="_blank"
+                      title="Перейти на страницу..">Loyverse</a>
+                </p>
+
+                <p>
+                    Описание.
+                </p>
+
+                <p>
+                    Систкма позволит начислать бонусы предоставлять скидки покупателям для владельцев небольших бизнесов
+                </p>
+
+
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<div class="container-item">
+    <div class="detail" style="text-align: right">
+        <div style="padding: 5px 5px 0 5px; overflow: hidden">
             <a href="#web/anycontrol" style="">View detail</a>
         </div>
 
     </div>
     <div class="item-block">
         <div>
-            <div   style="float: right; width: 50%; height: 300px">
+            <div style="float: right; width: 50%; height: 300px">
                 <div class="title-encon">
                     <img src="module/web/anycontrol/title.jpg" style="width: 90%; background: #000000">
                 </div>
@@ -23,17 +58,19 @@
                 </p>
 
                 <p>
-                    The application is designed for a variety of devices and an unlimited number of commands. Any devices controlled via SMS commands can be entered in the application memory.
-                    Для начала вы создаете объект который будете контролировать, и на странице всех команд добавляете связанные с объектом команды.
-                    На главной странице находятся избранные команды, которые вы можете отправить.   На странице всех команд может храниться полный список команд которые вы не используете но могут пригодиться. Для того чтобы команды были доступны для отправки вам нужно отметить их как избранные. Так же присутствует история отправленных команд. Если команда была доставлена ее дата отмечается зеленым цветом.
-
-                    В приложение добавлена карта, с помощью которой можно определить не только свое местоположение но и следить за подвижными обьектами которые привязаны к одному из серверов мониторинга.
+                    The application is designed for a variety of devices and an unlimited number of commands. Any
+                    devices controlled via SMS commands can be entered in the application memory.
+                    Для начала вы создаете объект который будете контролировать, и на странице всех команд добавляете
+                    связанные с объектом команды.
+                    На главной странице находятся избранные команды, которые вы можете отправить. На странице всех
+                    команд может храниться полный список команд которые вы не используете но могут пригодиться. Для того
+                    чтобы команды были доступны для отправки вам нужно отметить их как избранные. Так же присутствует
+                    история отправленных команд. Если команда была доставлена ее дата отмечается зеленым цветом.
+                    В приложение добавлена карта, с помощью которой можно определить не только свое местоположение но и
+                    следить за подвижными обьектами которые привязаны к одному из серверов мониторинга.
 
                     Приложение доступно на русском и английском языках.
                 </p>
-
-
-
 
 
             </div>
@@ -42,7 +79,7 @@
     </div>
 </div>
 
-        <!--////////////////////-->
+<!--////////////////////-->
 <div class="container-item">
     <div class="detail" style="text-align: right">
         <div style="padding: 5px 5px 0 5px; overflow: hidden">
@@ -52,7 +89,7 @@
     </div>
     <div class="item-block">
         <div>
-            <div   style="float: right; width: 50%; height: 300px">
+            <div style="float: right; width: 50%; height: 300px">
                 <div class="title-encon">
                     <img src="module/web/encon/title.jpg" style="width: 90%; background: #000000">
                 </div>
@@ -69,7 +106,9 @@
 
                 <p>
                     Очень простое приложение для запоминания слов.
-                    Вы просто добавляете незнакомые слова и их перевод и заучиваете когда вам удобно, скрывая или отображая перевод. Для закрепления результата, вам требуется десять раз правильно составить слово из перемешанных букв.
+                    Вы просто добавляете незнакомые слова и их перевод и заучиваете когда вам удобно, скрывая или
+                    отображая перевод. Для закрепления результата, вам требуется десять раз правильно составить слово из
+                    перемешанных букв.
                 </p>
             </div>
         </div>
@@ -78,7 +117,6 @@
 </div>
 
 <div class="container-item">
-
 
     <div class="detail" style="text-align: right">
         <div style="padding: 5px 5px 0 5px; overflow: hidden">
@@ -90,7 +128,7 @@
 
     <div class="item-block">
         <div>
-            <div   style="float: right; width: 50%; height: 300px">
+            <div style="float: right; width: 50%; height: 300px">
                 <div class="title-monitoring">
                     <img src="module/web/monitoring/title.jpg" style="width: 90%; background: #000000">
                 </div>
@@ -157,13 +195,11 @@
 
     <div class="item-block">
         <div>
-            <div   style="float: right; width: 50%; height: 300px">
+            <div style="float: right; width: 50%; height: 300px">
                 <div class="title-meteo">
                     <img src="module/web/borispol/borispol1.jpg" style="width: 90%; bacground: black">
                 </div>
             </div>
-
-
 
 
             <div style="margin-right: 50%; min-height: 300px">
@@ -175,7 +211,8 @@
                     Подборка оперативной информации о погоде. Типичный пример модульной разработки с помощью requireJs.
 
                 </p>
-                Страница создана для оценки погоды. Является помощником в дороге и помогает оценить приближение осадков за несколько часов.
+                Страница создана для оценки погоды. Является помощником в дороге и помогает оценить приближение осадков
+                за несколько часов.
                 <p>
 
 
@@ -220,12 +257,13 @@
                 <p>
                     Мотоцикл был смоделирован в 3dmax, отснят по кругу и зашит во flash.
                 </p>
-                 Делалась в качестве учебы но с пользой для Украинского диллера по продажам этих мотоциклов.
+                Делалась в качестве учебы но с пользой для Украинского диллера по продажам этих мотоциклов.
 
                 <p>
                     Из дополнительных сведений -
                     Основное время ушлона моделлинг, а именно 3 недели. Просчет одного цвета занимает от 4 до 8 часов.
-                    Программирования мало - но все равно крассиво. И сама детализация мотоцикла на порядок сложней моделинга авто из-за очень большого
+                    Программирования мало - но все равно крассиво. И сама детализация мотоцикла на порядок сложней
+                    моделинга авто из-за очень большого
                     количества мелочевки (подножки винтики итп).
                 </p>
 
