--- a/module/web/web_ru.html
+++ b/module/web/web_ru.html
@@ -34,7 +34,7 @@
 <div class="container-item">
     <div class="detail" style="text-align: right">
         <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/anycontrol" style="">View detail</a>
+            <a href="#web/anycontrol" style="">Детально</a>
         </div>
 
     </div>
@@ -81,7 +81,7 @@
 <div class="container-item">
     <div class="detail" style="text-align: right">
         <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/encon" style="">View detail</a>
+            <a href="#web/encon" style="">Детально</a>
         </div>
 
     </div>
@@ -118,7 +118,7 @@
 
     <div class="detail" style="text-align: right">
         <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/monitoring" style="">View detail</a>
+            <a href="#web/monitoring" style="">Детально</a>
         </div>
 
     </div>
@@ -185,7 +185,7 @@
 
     <div class="detail" style="text-align: right">
         <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/borispol" style="">View detail</a>
+            <a href="#web/borispol" style="">Детально</a>
         </div>
 
     </div>
@@ -234,7 +234,7 @@
 
     <div class="detail" style="text-align: right">
         <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/hyosung" style="">View detail</a>
+            <a href="#web/hyosung" style="">Детально</a>
         </div>
 
     </div>
