--- a/module/web/web_ru.html
+++ b/module/web/web_ru.html
@@ -1,7 +1,7 @@
 <div class="container-item">
     <div class="detail" style="text-align: right">
         <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/loyverse" style="">View detail</a>
+            <a href="#web/loyverse" style="">Детально</a>
         </div>
 
     </div>
