--- a/module/web/web_en.html
+++ b/module/web/web_en.html
@@ -1,6 +1,39 @@
 <div class="container-item">
     <div class="detail" style="text-align: right">
         <div style="padding: 5px 5px 0 5px; overflow: hidden">
+            <a href="#web/loyverse" style="">View detail</a>
+        </div>
+
+    </div>
+    <div class="item-block">
+        <div>
+            <div style="float: right; width: 50%; height: 300px">
+                <div class="title-encon">
+                    <img src="module/web/loyverse/01.jpg" style="width: 90%; background: #000000">
+                </div>
+            </div>
+
+            <div style="margin-right: 50%">
+                <p><a href="https://biz.loyverse.com" target="_blank"
+                      title="Перейти на страницу..">Loyverse</a>
+                </p>
+
+                <p>
+                    Описание.
+                </p>
+
+                <p>
+                    Систкма позволит начислать бонусы предоставлять скидки покупателям для владельцев небольших бизнесов
+                </p>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<div class="container-item">
+    <div class="detail" style="text-align: right">
+        <div style="padding: 5px 5px 0 5px; overflow: hidden">
             <a href="#web/anycontrol" style="">View detail</a>
         </div>
 
