--- a/module/web/web_ru.html
+++ b/module/web/web_ru.html
@@ -9,7 +9,7 @@
         <div>
             <div style="float: right; width: 50%; height: 300px">
                 <div class="title-encon">
-                    <img src="module/web/anycontrol/title.jpg" style="width: 90%; background: #000000">
+                    <img src="module/web/loyverse/01.jpg" style="width: 90%; background: #000000">
                 </div>
             </div>
 
