--- a/module/web/web_en.html
+++ b/module/web/web_en.html
@@ -19,11 +19,11 @@
                 </p>
 
                 <p>
-                    Описание.
+                    Description.
                 </p>
 
                 <p>
-                    Систкма позволит начислать бонусы предоставлять скидки покупателям для владельцев небольших бизнесов
+                    The system allows you to charge bonuses to give discounts to buyers for small business owners
                 </p>
             </div>
         </div>
