--- a/module/web/web_ru.html
+++ b/module/web/web_ru.html
@@ -23,7 +23,7 @@
                 </p>
 
                 <p>
-                    Систкма позволит начислать бонусы предоставлять скидки покупателям для владельцев небольших бизнесов
+                    Систeма позволит начислать бонусы предоставлять скидки покупателям для владельцев небольших бизнесов
                 </p>
             </div>
         </div>
