--- a/module/about/about_en.html
+++ b/module/about/about_en.html
@@ -1,97 +1,103 @@
 <div>
 
-    <h4> Desember 2014 - to present time: Unisystem. New project "LOYVERSE".  <a href="http://loyverse.com/">http://loyverse.com/</a>. </h4>
-    <div>
+    <h4> August 2014 - to present time: Ukraine weapon system (Private information).
+    </h4>
 
+    <div>
+    </div>
+    <h4> December 2014 - to august 2016: Unisystem. New project "LOYVERSE". <a href="http://loyverse.com/">http://loyverse.com/</a>.
+    </h4>
+
+    <div>
     </div>
 
-    <h4> Декабрь 2013 - по декабрь 2014: Unisystem. Create web interfaces. Main project "Ретеко кассир" - info <a
+    <h4> December 2013 - to december 2014: Unisystem. Create web interfaces. Main project "Ретеко кассир" - info <a
             href="http://reteko.com/">http://reteko.com/</a>. </h4>
     <p> Duties:</p>
     <ul type="disc">
         <li>Create web interface (design logic etc.)</li>
     </ul>
 
-	<h4>February 2012 - to present time - own project: Development real-time GPS tracking service (HTML, PHP, JS,
-		JAVA, (on Centos OpenVZ)).</h4>
+    <h4>February 2012 - to 2014 - own project: Development real-time GPS tracking service (HTML, PHP, JS,
+        JAVA, (on Centos OpenVZ)).</h4>
 
-	<p> Purpose:</p>
+    <p> Purpose:</p>
 
-	<ul type="disc">
-		<li>Quick response Rescue and assistance in case incident.</li>
-		<li>Security system moto/auto vehicle in case of driving away.</li>
-		<li>Logistics.</li>
-	</ul>
-	<p>System functions</p>
-	<ul>
-		<li>Online location objects.</li>
-		<li>Recording speed, distance, time, direction of travel, track.</li>
-		<li>Event notification operator.</li>
-		<li>Determination of the nearest "member" for going to the "event".</li>
-		<li>Event notification member by: sms, e-mail, phone.</li>
-
-
-	</ul>
+    <ul type="disc">
+        <li>Quick response Rescue and assistance in case incident.</li>
+        <li>Security system moto/auto vehicle in case of driving away.</li>
+        <li>Logistics.</li>
+    </ul>
+    <p>System functions</p>
+    <ul>
+        <li>Online location objects.</li>
+        <li>Recording speed, distance, time, direction of travel, track.</li>
+        <li>Event notification operator.</li>
+        <li>Determination of the nearest "member" for going to the "event".</li>
+        <li>Event notification member by: sms, e-mail, phone.</li>
 
 
-	<h4> April 2013 - to November 2013 JavaScript developer. Programming for Mobile Applications in the company
-		Intellect Service.</h4>
+    </ul>
 
-	<p>Main responsibilities:</p>
-	Creating a mobile application. HTML coding, сreate a data structure, the main Frameworks: Sencha touch, Sencha
-	ExtJS.
-	<p> Purpose:</p>
 
-	<ul type="disc">
-		<li>Electronic document in your phone.</li>
-		<li>Transactions with money</li>
-		<li>Payment etc.</li>
-	</ul>
+    <h4> April 2013 - to November 2013 JavaScript developer. Programming for Mobile Applications in the company
+        Intellect Service.</h4>
 
-	<h4>December 2010 to 2013: Head of Designer Projector Conctructor Departmen in the Akvavital company
-		(Construction and architecture).</h4>
-	<h4>May 2008 - 2010: designer-projector of the wellness-zones in the company “Akvavital” (Construction and
-		Architecture).</h4>
-	<ul>
-		<li>Work with Clients;</li>
-		<li>Making the design-projects of the wellness zone according to the wishes of Client with help of software
-			3D_max;
-		</li>
+    <p>Main responsibilities:</p>
+    Creating a mobile application. HTML coding, сreate a data structure, the main Frameworks: Sencha touch, Sencha
+    ExtJS.
+    <p> Purpose:</p>
 
-		<li>Making the detailed drafting and design calculation with help of software: AutoCAD, CATIA v5.</li>
-		<li>Directing of project.</li>
-	</ul>
+    <ul type="disc">
+        <li>Electronic document in your phone.</li>
+        <li>Transactions with money</li>
+        <li>Payment etc.</li>
+    </ul>
 
-	<h4>2002 - 2008 engineer-constructor of ASTC ANTONOV </h4>
-	<ul>
-		<li>Designing general appearance of planes;</li>
-		<li>Created and produced theoretical drawings of the plane’s general appearances;</li>
-		<li>adoption of new software;</li>
-	</ul>
+    <h4>December 2010 to 2013: Head of Designer Projector Conctructor Departmen in the Akvavital company
+        (Construction and architecture).</h4>
+    <h4>May 2008 - 2010: designer-projector of the wellness-zones in the company “Akvavital” (Construction and
+        Architecture).</h4>
+    <ul>
+        <li>Work with Clients;</li>
+        <li>Making the design-projects of the wellness zone according to the wishes of Client with help of software
+            3D_max;
+        </li>
 
-	Fairing of wind-powered engine for the plane “AN-148” was produced on the basis of my drawings. I have taught
-	two workers to the foundations of work with software CATIA V5 R17.
+        <li>Making the detailed drafting and design calculation with help of software: AutoCAD, CATIA v5.</li>
+        <li>Directing of project.</li>
+    </ul>
 
-	<h4>2000 - January 2007. engineer-constructor-designer in the company “Skateon” (part-time). </h4>
-	<ul>
-		<li>producing of theoretical drawings for general appearance of the planes;</li>
-		<li>design of cabin (cockpit), preparing a master geometry of goods for CNS;</li>
-		<li>estimating of weight information with help of software (CATIA V5);</li>
-		<li>making of advertising booklets;</li>
+    <h4>2002 - 2008 engineer-constructor of ASTC ANTONOV </h4>
+    <ul>
+        <li>Designing general appearance of planes;</li>
+        <li>Created and produced theoretical drawings of the plane’s general appearances;</li>
+        <li>adoption of new software;</li>
+    </ul>
 
-		<li>projecting of separate assemblies for aggregate plane’s systems;</li>
-		<li>production of working drawings;</li>
-		<li>quality control of final products;</li>
-		<li>developed a new technologies for working with composite materials;</li>
-	</ul>
+    Fairing of wind-powered engine for the plane “AN-148” was produced on the basis of my drawings. I have taught
+    two workers to the foundations of work with software CATIA V5 R17.
 
-	<h4>1998 – 1999 metalworker assembler in the company “AviaClub Ikar” (part-time): </h4>
-	<ul>
-		<li>work with composite materials;</li>
-		<li>installation of fuel system, final plane’s assembly;</li>
-		<li>2001 - 2002 i have been advanced in career: engineer-constructor in the same company. Up till now is put
-			up my project.
-		</li>
+    <h4>2000 - January 2007. engineer-constructor-designer in the company “Skateon” (part-time). </h4>
+    <ul>
+        <li>producing of theoretical drawings for general appearance of the planes;</li>
+        <li>design of cabin (cockpit), preparing a master geometry of goods for CNS;</li>
+        <li>estimating of weight information with help of software (CATIA V5);</li>
+        <li>making of advertising booklets;</li>
 
-	</ul>
+        <li>projecting of separate assemblies for aggregate plane’s systems;</li>
+        <li>production of working drawings;</li>
+        <li>quality control of final products;</li>
+        <li>developed a new technologies for working with composite materials;</li>
+    </ul>
+
+    <h4>1998 – 1999 metalworker assembler in the company “AviaClub Ikar” (part-time): </h4>
+    <ul>
+        <li>work with composite materials;</li>
+        <li>installation of fuel system, final plane’s assembly;</li>
+        <li>2001 - 2002 i have been advanced in career: engineer-constructor in the same company. Up till now is put
+            up my project.
+        </li>
+
+    </ul>
 </div>
