--- a/module/print/print_en.html
+++ b/module/print/print_en.html
@@ -4,7 +4,7 @@
 
     </div>
 <div style="margin: 10px; text-align: right">
-    <b>Full info:</b> <a href="http://lipatov.hol.es">http://lipatov.hol.es</a>
+    <b>Full info:</b> <a href="http://lipatov.hol.es">http://maxislav.github.io/resume</a>
 </div>
 
 
