--- a/module/print/print_ru.html
+++ b/module/print/print_ru.html
@@ -3,7 +3,7 @@
 
     </div>
     <div style="margin: 10px; text-align: right">
-        <b>Детальнee:</b> <a href="http://lipatov.hol.es">http://lipatov.hol.es</a>
+        <b>Детально:</b> <a href="http://lipatov.hol.es">http://maxislav.github.io/resume</a>
     </div>
 
     <article class="post__article" jscroll>
