--- a/module/about/about_en.html
+++ b/module/about/about_en.html
@@ -5,7 +5,7 @@
 
     <div>
     </div>
-    <h4> December 2014 - to august 2016: Unisystem. New project "LOYVERSE". <a href="http://loyverse.com/">http://loyverse.com/</a>.
+    <h4> December 2014 - to august 2016: Unisystem. New project "LOYVERSE". <a href="https://trinipos.com">https://trinipos.com/ru/products/pos/</a>.
     </h4>
 
     <div>
