--- a/module/web/web_en.html
+++ b/module/web/web_en.html
@@ -1,260 +1,138 @@
-<div class="container-item">
-    <div class="detail" style="text-align: right">
-        <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/loyverse" style="">View detail</a>
-        </div>
-
-    </div>
-    <div class="item-block">
-        <div>
-            <div style="float: right; width: 50%; height: 300px">
-                <div class="title-encon">
-                    <img src="module/web/loyverse/01.jpg" style="width: 90%; background: #000000">
-                </div>
-            </div>
-
-            <div style="margin-right: 50%">
-                <p><a href="https://biz.loyverse.com" target="_blank"
-                      title="Перейти на страницу..">Loyverse</a>
-                </p>
-
-                <p>
-                    Description.
-                </p>
-
-                <p>
-                    The system allows you to charge bonuses to give discounts to buyers for small business owners
-                </p>
-            </div>
-        </div>
-
-    </div>
-</div>
 
 <div class="container-item">
-    <div class="detail" style="text-align: right">
-        <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/anycontrol" style="">View detail</a>
-        </div>
-
+  <div class="detail" style="text-align: right;">
+    <div style="padding: 5px 5px 0 5px; overflow: hidden;"><a href="#web/loyverse">View detail</a></div>
+  </div>
+  <div class="item-block">
+    <div>
+      <div style="float: right; width: 50%; height: 300px;">
+        <div class="title-encon"><img src="module/web/loyverse/01.jpg" style="width: 90%; background: #000000;"/></div>
+      </div>
+      <div style="margin-right: 50%;">
+        <p><a href="https://trinipos.com/ru/products/pos/" target="_blank" title="Navigate to ">TRINIPOS</a></p>
+        <p>Description.</p>
+        <p>The system allows you to charge bonuses to give discounts to buyers for small business owners</p>
+      </div>
     </div>
-    <div class="item-block">
-        <div>
-            <div   style="float: right; width: 50%; height: 300px">
-                <div class="title-encon">
-                    <img src="module/web/anycontrol/title.jpg" style="width: 90%; background: #000000">
-                </div>
-            </div>
-
-            <div style="margin-right: 50%">
-                <p><a href="https://play.google.com/store/apps/details?id=com.atlas.mars.objectcontrol" target="_blank"
-                      title="Перейти на страницу..">AnyControl (Android)</a>
-                </p>
-
-                <p>
-                    Description.
-                </p>
-
-                <p>
-                    The application is designed for a multiple devices and an unlimited number of commands. Any device controlled via SMS commands can be entered in the application memory.
-                    First, you create object that will monitor and on the page of all the commands add code associated with the object.
-                    The home page displays selected commands that you can send. On the page  all the commands can be stored a full list of commands that you do not use, but can be useful. In order to command were available to send you need to mark them as favorites.  Is also present the history of sent commands. If the command has been delivered her date marked in green color.
-
-                    In the application added map, which can be used to define you location, also to monitor the mobile devices that are attached to one of the servers monitoring.
-
-                    The application is available in English and Russian languages.
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-
-<div class="container-item">
-    <div class="detail" style="text-align: right">
-        <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/encon" style="">View detail</a>
-        </div>
-
-    </div>
-    <div class="item-block">
-        <div>
-            <div   style="float: right; width: 50%; height: 300px">
-                <div class="title-encon">
-                    <img src="module/web/encon/title.jpg" style="width: 90%; background: #000000">
-                </div>
-            </div>
-
-            <div style="margin-right: 50%">
-                <p><a href="https://play.google.com/store/apps/details?id=com.atlas.mars.englishcon" target="_blank"
-                      title="Перейти на страницу..">EnCon (Android)</a>
-                </p>
-
-                <p>
-                    Description.
-
-                </p>
-
-                <p> Very simple application for memorizing words.
-                    just add the unfamiliar words and their translations
-                    and memorize when you have a free time. You can hide and show translations with a single touch.
-                    To fix the result, you need ten times correctly to make the word of mixed letters.
-                </p>
-
-
-
-
-
-            </div>
-        </div>
-
-    </div>
-</div>
-<!--////////////////////-->
-
-
-<div class="container-item">
-    <div class="detail" style="text-align: right">
-        <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/monitoring" style="">View detail</a>
-        </div>
-
-    </div>
-    <div class="item-block">
-        <div>
-            <div   style="float: right; width: 50%; height: 300px">
-                    <div class="">
-                        <img src="module/web/monitoring/title.jpg" style="width: 90%; background: #000000">
-                    </div>
-            </div>
-
-            <div style="margin-right: 50%">
-                <p><a href="http://motohelp-ua.org/atlas" target="_blank"
-                         title="Перейти на страницу..">Monitoring</a>
-                </p>
-
-                <p>
-                    <!--Для cлужбы спасения и помощи двухколесным участникам дорожного движения -->
-                   For  rescue and assistance Service moto/velo participant of traffic
-                    - <a
-                        href="http://motohelp-ua.org/"
-                        target="_blank"
-                        title="MotoHelp">МотоХелп</a>.
-                    <!--Сайт написан с учетом всевозможных пожеланий для более оперативного реагирование на инциденты в-->
-                    Site create according to the wishes MotoHelp Service for immediately response road accident.
-                    Most of the function site is notification MH. For the average user this functionality is hidden.
-                    The main advantage of the system, operating at slow communication.
-                </p>
-
-                <p>
-                    The principle of operation and design: The site uses the library <a href="	http://leafletjs.com/"
-                                                                               target="_blank"
-                                                                               title="Leaflet">Leaflet</a>.
-
-                    JAVA parser listens port, receives, decodes and stores the received packets into a MySQL database
-                    Page with javascript regularly polls the database analyzing the emergence of new coordinates.
-                    All data is displayed for all users in the group.
-
-                    Demo entrance:
-                    demo
-                    demo.
-
-                </p>
-
-
-                <p>
-                    Go to the page <a href="http://motohelp-ua.org/atlas" target="_blank"
-                                           title=" Go to the page..">
-                    http://motohelp-ua.org/atlas </a>
-
-                </p>
-
-                <p>Demo entrance  -> login: demo | Pass: demo </p>
-            </div>
-        </div>
-
-    </div>
+  </div>
 </div>
 <div class="container-item">
-    <div class="detail" style="text-align: right">
-        <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/borispol" style="">View detail</a>
-        </div>
-
+  <div class="detail" style="text-align: right;">
+    <div style="padding: 5px 5px 0 5px; overflow: hidden;"><a href="#web/anycontrol">View detail</a></div>
+  </div>
+  <div class="item-block">
+    <div>
+      <div style="float: right; width: 50%; height: 300px;">
+        <div class="title-encon"><img src="module/web/anycontrol/title.jpg" style="width: 90%; background: #000000;"/></div>
+      </div>
+      <div style="margin-right: 50%;">
+        <p><a href="https://play.google.com/store/apps/details?id=com.atlas.mars.objectcontrol" target="_blank" title="Перейти на страницу..">AnyControl (Android)</a></p>
+        <p>Description.</p>
+        <p>
+          The application is designed for a multiple devices and an unlimited number of commands. Any device controlled via SMS commands can be entered in the application memory.
+          First, you create object that will monitor and on the page of all the commands add code associated with the object.
+          The home page displays selected commands that you can send. On the page  all the commands can be stored a full list of commands that you do not use, but can be useful. In order to command were available to send you need to mark them as favorites.  Is also present the history of sent commands. If the command has been delivered her date marked in green color.
+          In the application added map, which can be used to define you location, also to monitor the mobile devices that are attached to one of the servers monitoring.
+          The application is available in English and Russian languages.
+        </p>
+      </div>
     </div>
-    <div class="item-block">
-        <div>
-            <div   style="float: right; width: 50%; height: 300px">
-                <div class="">
-                    <img src="module/web/borispol/borispol1.jpg" style="width: 90%; bacground: black">
-                </div>
-            </div>
-            <div style="margin-right: 50%; min-height: 300px">
-                <p><a href="http://borispol.hol.es" target="_blank" title="Перейти на страницу..">Метео</a>
-                </p>
-
-
-                <p>
-                    Selection of operational information about the weather. A typical example of a modular design using requireJs.
-
-                </p>
-                This page is created to assess the weather. Is a helper on the road.  In a few hours you can appreciate approximation rain.
-                <p>
-
-
-                </p>
-
-
-                <p>
-                    Go to the page  <a href="http://borispol.hol.es" target="_blank"
-                                           title="Go to the page ">
-                    http://borispol.hol.es </a>
-
-                </p>
-            </div>
-        </div>
-
-    </div>
+  </div>
 </div>
-
 <div class="container-item">
-
-
-    <div class="detail" style="text-align: right">
-        <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/hyosung" style="">View detail</a>
-        </div>
-
+  <div class="detail" style="text-align: right;">
+    <div style="padding: 5px 5px 0 5px; overflow: hidden;"><a href="#web/encon">View detail</a></div>
+  </div>
+  <div class="item-block">
+    <div>
+      <div style="float: right; width: 50%; height: 300px;">
+        <div class="title-encon"><img src="module/web/encon/title.jpg" style="width: 90%; background: #000000;"/></div>
+      </div>
+      <div style="margin-right: 50%;">
+        <p><a href="https://play.google.com/store/apps/details?id=com.atlas.mars.englishcon" target="_blank" title="Перейти на страницу..">EnCon (Android)</a></p>
+        <p>Description.</p>
+        <p>
+          Very simple application for memorizing words.
+          just add the unfamiliar words and their translations
+          and memorize when you have a free time. You can hide and show translations with a single touch.
+          To fix the result, you need ten times correctly to make the word of mixed letters.
+        </p>
+      </div>
     </div>
-
-
-    <div class="item-block">
-        <div>
-            <div class="sprite-img">
-                <div class="title-hyosung">
-                    <img src="module/web/hyosung/010000.png" style="width: 90%; bacground: black">
-                </div>
-            </div>
-            <div style="margin-right: 50%; min-height: 300px">
-                <p>Pseudo 3D
-                </p>
-
-
-                <p>
-                    The bike was modeled in 3d max, shot around and inserted into the flash.
-                </p>
-                Training project. Use dealers of this brand in Ukraine.
-
-                <p>
-                    Additional information -
-                    a lot of small details of the construction, a lot of time is spent in modeling, about 3 weeks. Calculation scene in 3D-max of the same color takes up 4 or 8 hours.
-                    Programming a little - but still beautiful.
-                </p>
-
-
-            </div>
-        </div>
-
+  </div>
+</div>
+<!-- ////////////////////-->
+<div class="container-item">
+  <div class="detail" style="text-align: right;">
+    <div style="padding: 5px 5px 0 5px; overflow: hidden;"><a href="#web/monitoring">View detail</a></div>
+  </div>
+  <div class="item-block">
+    <div>
+      <div style="float: right; width: 50%; height: 300px;">
+        <div><img src="module/web/monitoring/title.jpg" style="width: 90%; background: #000000;"/></div>
+      </div>
+      <div style="margin-right: 50%;">
+        <p><a href="http://motohelp-ua.org/atlas" target="_blank" title="Перейти на страницу..">Monitoring</a></p>
+        <p>
+          <!-- Для cлужбы спасения и помощи двухколесным участникам дорожного движения-->
+          For  rescue and assistance Service moto/velo participant of traffic
+          -<a href="http://motohelp-ua.org/" target="_blank" title="MotoHelp">МотоХелп</a>.
+          <!-- Сайт написан с учетом всевозможных пожеланий для более оперативного реагирование на инциденты в-->
+          Site create according to the wishes MotoHelp Service for immediately response road accident.
+          Most of the function site is notification MH. For the average user this functionality is hidden.
+          The main advantage of the system, operating at slow communication.
+        </p>
+        <p>The principle of operation and design: The site uses the library<a href="	http://leafletjs.com/" target="_blank" title="Leaflet">Leaflet</a>
+          .
+                              JAVA parser listens port, receives, decodes and stores the received packets into a MySQL database
+                              Page with javascript regularly polls the database analyzing the emergence of new coordinates.
+                              All data is displayed for all users in the group.
+                              Demo entrance:
+                              demo
+                              demo.
+        </p>
+        <p>Go to the page<a href="http://motohelp-ua.org/atlas" target="_blank" title=" Go to the page..">http://motohelp-ua.org/atlas</a></p>
+        <p>Demo entrance  -> login: demo | Pass: demo</p>
+      </div>
     </div>
+  </div>
+</div>
+<div class="container-item">
+  <div class="detail" style="text-align: right;">
+    <div style="padding: 5px 5px 0 5px; overflow: hidden;"><a href="#web/borispol">View detail</a></div>
+  </div>
+  <div class="item-block">
+    <div>
+      <div style="float: right; width: 50%; height: 300px;">
+        <div><img src="module/web/borispol/borispol1.jpg" style="width: 90%; bacground: black;"/></div>
+      </div>
+      <div style="margin-right: 50%; min-height: 300px;">
+        <p><a href="http://borispol.hol.es" target="_blank" title="Перейти на страницу..">Метео</a></p>
+        <p>Selection of operational information about the weather. A typical example of a modular design using requireJs.</p>                This page is created to assess the weather. Is a helper on the road.  In a few hours you can appreciate approximation rain.
+        <p></p>
+        <p>Go to the page<a href="http://borispol.hol.es" target="_blank" title="Go to the page ">http://borispol.hol.es</a></p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container-item">
+  <div class="detail" style="text-align: right;">
+    <div style="padding: 5px 5px 0 5px; overflow: hidden;"><a href="#web/hyosung">View detail</a></div>
+  </div>
+  <div class="item-block">
+    <div>
+      <div class="sprite-img">
+        <div class="title-hyosung"><img src="module/web/hyosung/010000.png" style="width: 90%; bacground: black;"/></div>
+      </div>
+      <div style="margin-right: 50%; min-height: 300px;">
+        <p>Pseudo 3D</p>
+        <p>The bike was modeled in 3d max, shot around and inserted into the flash.</p>                Training project. Use dealers of this brand in Ukraine.
+        <p>
+          Additional information -
+          a lot of small details of the construction, a lot of time is spent in modeling, about 3 weeks. Calculation scene in 3D-max of the same color takes up 4 or 8 hours.
+          Programming a little - but still beautiful.
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
