--- a/module/about/about_ru.html
+++ b/module/about/about_ru.html
@@ -1,5 +1,11 @@
 <div>
 
+
+    <h4> August 2015 - to present time: Ukraine weapon system (Private information).
+    </h4>
+
+    <div>
+    </div>
     <h4> Декабрь 2014 - по настоящее время: Unisystem. Работа над новым проектом "LOYVERSE".  <a href="http://loyverse.com/">http://loyverse.com/</a>. </h4>
 
     <h4> Декабрь 2013 - по декабрь 2014: Unisystem. Создание веб интерфесов. Основной проект "Ретеко кассир" - Основная информация <a
