--- a/module/web/web_en.html
+++ b/module/web/web_en.html
@@ -1,11 +1,52 @@
 
 <div class="container-item">
   <div class="detail" style="text-align: right;">
-    <div style="padding: 5px 5px 0 5px; overflow: hidden;"><a href="#web/loyverse">View detail</a></div>
+    <div style="padding: 5px 5px 0 5px; overflow: hidden;"><a href="#web/bike-atlas">View detail</a></div>
+  </div>
+  <div class="item-block">
+    <div style="height: 260px;">
+      <div style="float: right; width: 50%; height: 100%;">
+        <div class="title-encon"><img src="module/web/bike-atlas/bike-atlas.png" style="width: 90%; background: #000000;"/></div>
+      </div>
+      <div style="margin-right: 50%;">
+        <p><a href="http://maxislav.github.io/bike-atlas/" target="_blank" title="Navigate to ">Bike-Atlas</a></p>
+        <p>Description.</p>
+        <p>
+          Monitoring system for cyclists. Social tracking system in real time.
+          Displays all friends on the map. You can plan meetings, meet during the trip. Helps analyze distance and speed after recording you trip.
+        </p>
+        <p>Go to the page  &nbsp;<a href="http://maxislav.github.io/bike-atlas/" target="_blank" title="Go to the page ">http://maxislav.github.io/bike-atlas/</a></p>
+        <p>Github: &nbsp;<a href="https://github.com/Maxislav/bike-atlas">https://github.com/Maxislav/bike-atlas</a></p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container-item">
+  <div class="detail" style="text-align: right;">
+    <div style="padding: 5px 5px 0 5px; overflow: hidden;"><a href="#web/borispol">View detail</a></div>
   </div>
   <div class="item-block">
     <div>
       <div style="float: right; width: 50%; height: 300px;">
+        <div><img src="module/web/borispol/meteo-radar.png" style="width: 90%; bacground: black;"/></div>
+      </div>
+      <div style="margin-right: 50%; min-height: 300px;">
+        <p><a href="http://meteo-radar.info" target="_blank" title="Перейти на страницу..">Метео</a></p>
+        <p>Selection of operational information about the weather. A typical example of a modular design using requireJs.</p>                This page is created to assess the weather. Is a helper on the road.  In a few hours you can appreciate approximation rain.
+        <p></p>
+        <p>Go to the page  &nbsp;<a href="http://meteo-radar.info" target="_blank" title="Go to the page ">http://meteo-radar.info</a></p>
+        <p>Github: &nbsp;<a href="https://github.com/Maxislav/borispol-radar2">https://github.com/Maxislav/borispol-radar2</a></p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container-item">
+  <div class="detail" style="text-align: right;">
+    <div style="padding: 5px 5px 0 5px; overflow: hidden;"><a href="#web/loyverse">View detail</a></div>
+  </div>
+  <div class="item-block">
+    <div>
+      <div style="float: right; width: 50%; height: 250px;">
         <div class="title-encon"><img src="module/web/loyverse/01.jpg" style="width: 90%; background: #000000;"/></div>
       </div>
       <div style="margin-right: 50%;">
@@ -93,24 +134,6 @@
         </p>
         <p>Go to the page<a href="http://motohelp-ua.org/atlas" target="_blank" title=" Go to the page..">http://motohelp-ua.org/atlas</a></p>
         <p>Demo entrance  -> login: demo | Pass: demo</p>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="container-item">
-  <div class="detail" style="text-align: right;">
-    <div style="padding: 5px 5px 0 5px; overflow: hidden;"><a href="#web/borispol">View detail</a></div>
-  </div>
-  <div class="item-block">
-    <div>
-      <div style="float: right; width: 50%; height: 300px;">
-        <div><img src="module/web/borispol/borispol1.jpg" style="width: 90%; bacground: black;"/></div>
-      </div>
-      <div style="margin-right: 50%; min-height: 300px;">
-        <p><a href="http://borispol.hol.es" target="_blank" title="Перейти на страницу..">Метео</a></p>
-        <p>Selection of operational information about the weather. A typical example of a modular design using requireJs.</p>                This page is created to assess the weather. Is a helper on the road.  In a few hours you can appreciate approximation rain.
-        <p></p>
-        <p>Go to the page<a href="http://borispol.hol.es" target="_blank" title="Go to the page ">http://borispol.hol.es</a></p>
       </div>
     </div>
   </div>
