--- a/module/web/web_ru.html
+++ b/module/web/web_ru.html
@@ -1,273 +1,172 @@
-<div class="container-item">
-    <div class="detail" style="text-align: right">
-        <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/loyverse" style="">Детально</a>
-        </div>
-
-    </div>
-    <div class="item-block">
-        <div>
-            <div style="float: right; width: 50%; height: 300px">
-                <div class="title-encon">
-                    <img src="module/web/loyverse/01.jpg" style="width: 90%; background: #000000">
-                </div>
-            </div>
-
-            <div style="margin-right: 50%">
-                <p><a href="https://biz.loyverse.com" target="_blank"
-                      title="Перейти на страницу..">Loyverse</a>
-                </p>
-
-                <p>
-                    Описание.
-                </p>
-
-                <p>
-                    Систeма позволит начислать бонусы предоставлять скидки покупателям для владельцев небольших бизнесов
-                </p>
-            </div>
-        </div>
-
-    </div>
-</div>
 
 <div class="container-item">
-    <div class="detail" style="text-align: right">
-        <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/anycontrol" style="">Детально</a>
-        </div>
-
+  <div class="detail" style="text-align: right;">
+    <div style="padding: 5px 5px 0 5px; overflow: hidden;"><a href="#web/bike-atlas">View detail</a></div>
+  </div>
+  <div class="item-block">
+    <div style="height: 260px;">
+      <div style="float: right; width: 50%; height: 100%;">
+        <div class="title-encon"><img src="module/web/bike-atlas/bike-atlas.png" style="width: 90%; background: #000000;"/></div>
+      </div>
+      <div style="margin-right: 50%;">
+        <p><a href="http://maxislav.github.io/bike-atlas/" target="_blank" title="Navigate to ">Bike-Atlas</a></p>
+        <p>Description.</p>
+        <p>
+          Monitoring system for cyclists. Social tracking system in real time.
+          Displays all friends on the map. You can plan meetings, meet during the trip. Helps analyze distance and speed after recording you trip.
+        </p>
+        <p>Github: &nbsp;<a href="https://github.com/Maxislav/bike-atlas">https://github.com/Maxislav/bike-atlas</a></p>
+      </div>
     </div>
-    <div class="item-block">
-        <div>
-            <div style="float: right; width: 50%; height: 300px">
-                <div class="title-encon">
-                    <img src="module/web/anycontrol/title.jpg" style="width: 90%; background: #000000">
-                </div>
-            </div>
-
-            <div style="margin-right: 50%">
-                <p><a href="https://play.google.com/store/apps/details?id=com.atlas.mars.objectcontrol" target="_blank"
-                      title="Перейти на страницу..">AnyControl (Android)</a>
-                </p>
-
-                <p>
-                    Description.
-                </p>
-
-                <p>
-                    The application is designed for a variety of devices and an unlimited number of commands. Any
-                    devices controlled via SMS commands can be entered in the application memory.
-                    Для начала вы создаете объект который будете контролировать, и на странице всех команд добавляете
-                    связанные с объектом команды.
-                    На главной странице находятся избранные команды, которые вы можете отправить. На странице всех
-                    команд может храниться полный список команд которые вы не используете но могут пригодиться. Для того
-                    чтобы команды были доступны для отправки вам нужно отметить их как избранные. Так же присутствует
-                    история отправленных команд. Если команда была доставлена ее дата отмечается зеленым цветом.
-                    В приложение добавлена карта, с помощью которой можно определить не только свое местоположение но и
-                    следить за подвижными обьектами которые привязаны к одному из серверов мониторинга.
-
-                    Приложение доступно на русском и английском языках.
-                </p>
-
-
-            </div>
-        </div>
-
-    </div>
-</div>
-
-<!--////////////////////-->
-<div class="container-item">
-    <div class="detail" style="text-align: right">
-        <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/encon" style="">Детально</a>
-        </div>
-
-    </div>
-    <div class="item-block">
-        <div>
-            <div style="float: right; width: 50%; height: 300px">
-                <div class="title-encon">
-                    <img src="module/web/encon/title.jpg" style="width: 90%; background: #000000">
-                </div>
-            </div>
-
-            <div style="margin-right: 50%">
-                <p><a href="https://play.google.com/store/apps/details?id=com.atlas.mars.englishcon" target="_blank"
-                      title="Перейти на страницу..">EnCon (Android)</a>
-                </p>
-
-                <p>
-                    Описание
-                </p>
-
-                <p>
-                    Очень простое приложение для запоминания слов.
-                    Вы просто добавляете незнакомые слова и их перевод и заучиваете когда вам удобно, скрывая или
-                    отображая перевод. Для закрепления результата, вам требуется десять раз правильно составить слово из
-                    перемешанных букв.
-                </p>
-            </div>
-        </div>
-
-    </div>
-</div>
-
-<div class="container-item">
-
-    <div class="detail" style="text-align: right">
-        <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/monitoring" style="">Детально</a>
-        </div>
-
-    </div>
-
-
-    <div class="item-block">
-        <div>
-            <div style="float: right; width: 50%; height: 300px">
-                <div class="title-monitoring">
-                    <img src="module/web/monitoring/title.jpg" style="width: 90%; background: #000000">
-                </div>
-            </div>
-
-            <div style="margin-right: 50%">
-                <p><a href="http://motohelp-ua.org/atlas" target="_blank"
-                      title="Перейти на страницу..">Мониторинг</a>
-                </p>
-
-                <p>
-                    Для cлужбы спасения и помощи двухколесным участникам дорожного движения - <a
-                        href="http://motohelp-ua.org/"
-                        target="_blank"
-                        title="MotoHelp">МотоХелп</a>.
-                    Сайт написан с учетом всевозможных пожеланий для более оперативного реагирование на инциденты в
-                    дороге. 80%
-                    функционала написан под требования МХ. Для "сторонних обывателей" основое преимущество - адаптация
-                    для
-                    смартфонов и
-                    работа приложения на малых скоростях передачи данных(GPRS) при большом количестве пользователей.
-                </p>
-
-                <p>
-                    Принцип работы и конструкция: Сайт написан на платформе <a href="	http://leafletjs.com/"
-                                                                               target="_blank"
-                                                                               title="Leaflet">Leaflet</a>. Парсер на
-                    JAVA
-                    слушает порт,
-                    принимает, расшифровывает и складирует принятые пакеты в базу данных MySQL. Страница с подключенным
-                    JavaScript с периодичностью опрашивает базу с "вопросом" появления новых координат.
-                    Все данные отображаются у всех пользователей входящих в группу.
-
-                    Сайт в непрерывно обновляется, временно сраничка автоматической регистрации отключена. Пробный вход
-                    demo
-                    demo.
-
-                </p>
-
-
-                <p>
-                    Перейти на страницу <a href="http://motohelp-ua.org/atlas" target="_blank"
-                                           title="Перейти на страницу..">
-                    http://motohelp-ua.org/atlas </a>
-
-                </p>
-
-                <p>Демо вход -> login: demo | Pass: demo </p>
-            </div>
-        </div>
-
-    </div>
+  </div>
 </div>
 <div class="container-item">
-
-
-    <div class="detail" style="text-align: right">
-        <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/borispol" style="">Детально</a>
-        </div>
-
+  <div class="detail" style="text-align: right;">
+    <div style="padding: 5px 5px 0 5px; overflow: hidden;"><a href="#web/borispol">Детально</a></div>
+  </div>
+  <div class="item-block">
+    <div>
+      <div style="float: right; width: 50%; height: 300px;">
+        <div class="title-meteo"><img src="module/web/borispol/meteo-radar.png" style="width: 90%; bacground: black;"/></div>
+      </div>
+      <div style="margin-right: 50%; min-height: 300px;">
+        <p><a href="http://meteo-radar.info" target="_blank" title="Перейти на страницу..">Метео</a></p>
+        <p>Подборка оперативной информации о погоде. Типичный пример модульной разработки с помощью requireJs.</p>
+                        Страница создана для оценки погоды. Является помощником в дороге и помогает оценить приближение осадков
+                        за несколько часов.
+        <p></p>
+        <p>Перейти на страницу<a href="http://meteo-radar.info" target="_blank" title="Перейти на страницу..">http://meteo-radar.info</a></p>
+        <p>Github: &nbsp;<a href="https://github.com/Maxislav/borispol-radar2">https://github.com/Maxislav/borispol-radar2</a></p>
+      </div>
     </div>
-
-
-    <div class="item-block">
-        <div>
-            <div style="float: right; width: 50%; height: 300px">
-                <div class="title-meteo">
-                    <img src="module/web/borispol/borispol1.jpg" style="width: 90%; bacground: black">
-                </div>
-            </div>
-
-
-            <div style="margin-right: 50%; min-height: 300px">
-                <p><a href="http://borispol.hol.es" target="_blank" title="Перейти на страницу..">Метео</a>
-                </p>
-
-
-                <p>
-                    Подборка оперативной информации о погоде. Типичный пример модульной разработки с помощью requireJs.
-
-                </p>
-                Страница создана для оценки погоды. Является помощником в дороге и помогает оценить приближение осадков
-                за несколько часов.
-                <p>
-
-
-                </p>
-
-
-                <p>
-                    Перейти на страницу <a href="http://borispol.hol.es" target="_blank"
-                                           title="Перейти на страницу..">
-                    http://borispol.hol.es </a>
-
-                </p>
-            </div>
-        </div>
-
-    </div>
+  </div>
 </div>
-
 <div class="container-item">
-
-
-    <div class="detail" style="text-align: right">
-        <div style="padding: 5px 5px 0 5px; overflow: hidden">
-            <a href="#web/hyosung" style="">Детально</a>
-        </div>
-
+  <div class="detail" style="text-align: right;">
+    <div style="padding: 5px 5px 0 5px; overflow: hidden;"><a href="#web/loyverse">Детально</a></div>
+  </div>
+  <div class="item-block">
+    <div>
+      <div style="float: right; width: 50%; height: 300px;">
+        <div class="title-encon"><img src="module/web/loyverse/01.jpg" style="width: 90%; background: #000000;"/></div>
+      </div>
+      <div style="margin-right: 50%;">
+        <p><a href="https://biz.loyverse.com" target="_blank" title="Перейти на страницу..">Loyverse</a></p>
+        <p>Описание.</p>
+        <p>Систeма позволит начислать бонусы предоставлять скидки покупателям для владельцев небольших бизнесов</p>
+      </div>
     </div>
-
-
-    <div class="item-block">
-        <div>
-            <div class="sprite-img">
-                <div class="title-hyosung">
-                    <img src="module/web/hyosung/010000.png" style="width: 90%; bacground: black">
-                </div>
-            </div>
-            <div style="margin-right: 50%; min-height: 300px">
-                <p>Псевдо 3Д
-                </p>
-
-
-                <p>
-                    Мотоцикл был смоделирован в 3dmax, отснят по кругу и зашит во flash.
-                </p>
-                Делалась в качестве учебы но с пользой для Украинского диллера по продажам этих мотоциклов.
-
-                <p>
-                    Из дополнительных сведений -
-                    Основное время ушлона моделлинг, а именно 3 недели. Просчет одного цвета занимает от 4 до 8 часов.
-                    Программирования мало - но все равно крассиво. И сама детализация мотоцикла на порядок сложней
-                    моделинга авто из-за очень большого
-                    количества мелочевки (подножки винтики итп).
-                </p>
-
-
-            </div>
-        </div>
-
+  </div>
+</div>
+<div class="container-item">
+  <div class="detail" style="text-align: right;">
+    <div style="padding: 5px 5px 0 5px; overflow: hidden;"><a href="#web/anycontrol">Детально</a></div>
+  </div>
+  <div class="item-block">
+    <div>
+      <div style="float: right; width: 50%; height: 300px;">
+        <div class="title-encon"><img src="module/web/anycontrol/title.jpg" style="width: 90%; background: #000000;"/></div>
+      </div>
+      <div style="margin-right: 50%;">
+        <p><a href="https://play.google.com/store/apps/details?id=com.atlas.mars.objectcontrol" target="_blank" title="Перейти на страницу..">AnyControl (Android)</a></p>
+        <p>Description.</p>
+        <p>
+          The application is designed for a variety of devices and an unlimited number of commands. Any
+          devices controlled via SMS commands can be entered in the application memory.
+          Для начала вы создаете объект который будете контролировать, и на странице всех команд добавляете
+          связанные с объектом команды.
+          На главной странице находятся избранные команды, которые вы можете отправить. На странице всех
+          команд может храниться полный список команд которые вы не используете но могут пригодиться. Для того
+          чтобы команды были доступны для отправки вам нужно отметить их как избранные. Так же присутствует
+          история отправленных команд. Если команда была доставлена ее дата отмечается зеленым цветом.
+          В приложение добавлена карта, с помощью которой можно определить не только свое местоположение но и
+          следить за подвижными обьектами которые привязаны к одному из серверов мониторинга.
+          Приложение доступно на русском и английском языках.
+        </p>
+      </div>
     </div>
+  </div>
+</div>
+<!-- ////////////////////-->
+<div class="container-item">
+  <div class="detail" style="text-align: right;">
+    <div style="padding: 5px 5px 0 5px; overflow: hidden;"><a href="#web/encon">Детально</a></div>
+  </div>
+  <div class="item-block">
+    <div>
+      <div style="float: right; width: 50%; height: 300px;">
+        <div class="title-encon"><img src="module/web/encon/title.jpg" style="width: 90%; background: #000000;"/></div>
+      </div>
+      <div style="margin-right: 50%;">
+        <p><a href="https://play.google.com/store/apps/details?id=com.atlas.mars.englishcon" target="_blank" title="Перейти на страницу..">EnCon (Android)</a></p>
+        <p>Описание</p>
+        <p>
+          Очень простое приложение для запоминания слов.
+          Вы просто добавляете незнакомые слова и их перевод и заучиваете когда вам удобно, скрывая или
+          отображая перевод. Для закрепления результата, вам требуется десять раз правильно составить слово из
+          перемешанных букв.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container-item">
+  <div class="detail" style="text-align: right;">
+    <div style="padding: 5px 5px 0 5px; overflow: hidden;"><a href="#web/monitoring">Детально</a></div>
+  </div>
+  <div class="item-block">
+    <div>
+      <div style="float: right; width: 50%; height: 300px;">
+        <div class="title-monitoring"><img src="module/web/monitoring/title.jpg" style="width: 90%; background: #000000;"/></div>
+      </div>
+      <div style="margin-right: 50%;">
+        <p><a href="http://motohelp-ua.org/atlas" target="_blank" title="Перейти на страницу..">Мониторинг</a></p>
+        <p>Для cлужбы спасения и помощи двухколесным участникам дорожного движения -<a href="http://motohelp-ua.org/" target="_blank" title="MotoHelp">МотоХелп</a>
+          .
+                              Сайт написан с учетом всевозможных пожеланий для более оперативного реагирование на инциденты в
+                              дороге. 80%
+                              функционала написан под требования МХ. Для "сторонних обывателей" основое преимущество - адаптация
+                              для
+                              смартфонов и
+                              работа приложения на малых скоростях передачи данных(GPRS) при большом количестве пользователей.
+        </p>
+        <p>Принцип работы и конструкция: Сайт написан на платформе<a href="	http://leafletjs.com/" target="_blank" title="Leaflet">Leaflet</a>
+          . Парсер на
+                              JAVA
+                              слушает порт,
+                              принимает, расшифровывает и складирует принятые пакеты в базу данных MySQL. Страница с подключенным
+                              JavaScript с периодичностью опрашивает базу с "вопросом" появления новых координат.
+                              Все данные отображаются у всех пользователей входящих в группу.
+                              Сайт в непрерывно обновляется, временно сраничка автоматической регистрации отключена. Пробный вход
+                              demo
+                              demo.
+        </p>
+        <p>Перейти на страницу<a href="http://motohelp-ua.org/atlas" target="_blank" title="Перейти на страницу..">http://motohelp-ua.org/atlas</a></p>
+        <p>Демо вход -> login: demo | Pass: demo</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container-item">
+  <div class="detail" style="text-align: right;">
+    <div style="padding: 5px 5px 0 5px; overflow: hidden;"><a href="#web/hyosung">Детально</a></div>
+  </div>
+  <div class="item-block">
+    <div>
+      <div class="sprite-img">
+        <div class="title-hyosung"><img src="module/web/hyosung/010000.png" style="width: 90%; bacground: black;"/></div>
+      </div>
+      <div style="margin-right: 50%; min-height: 300px;">
+        <p>Псевдо 3Д</p>
+        <p>Мотоцикл был смоделирован в 3dmax, отснят по кругу и зашит во flash.</p>                Делалась в качестве учебы но с пользой для Украинского диллера по продажам этих мотоциклов.
+        <p>
+          Из дополнительных сведений -
+          Основное время ушлона моделлинг, а именно 3 недели. Просчет одного цвета занимает от 4 до 8 часов.
+          Программирования мало - но все равно крассиво. И сама детализация мотоцикла на порядок сложней
+          моделинга авто из-за очень большого
+          количества мелочевки (подножки винтики итп).
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
